# Pixel-Motion

./: .gitignore  BUILD.md  CMakeLists.txt  README.md  vcpkg.json
src/: Application.cpp  Application.h  main.cpp
src/core/: Configuration.cpp  Configuration.h  Logger.cpp  Logger.h
src/desktop/: DesktopManager.cpp  DesktopManager.h  MonitorInfo.cpp  MonitorInfo.h  MonitorManager.cpp  MonitorManager.h  WallpaperWindow.cpp  WallpaperWindow.h
src/rendering/: DX11Device.cpp  DX11Device.h  RendererContext.cpp  RendererContext.h  RendererContext_scaling.cpp  TextureManager.cpp  TextureManager.h
src/rendering/shaders/: FullscreenQuad.hlsl  NV12ToRGBA.hlsl
src/resources/: BatteryMonitor.cpp  BatteryMonitor.h  GameModeDetector.cpp  GameModeDetector.h  ResourceManager.cpp  ResourceManager.h
src/ui/: PixelMotion.rc  SettingsWindow.cpp  SettingsWindow.h  TrayIcon.cpp  TrayIcon.h  resource.h
src/video/: AudioPlayer.cpp  AudioPlayer.h  FrameQueue.cpp  FrameQueue.h  VideoDecoder.cpp  VideoDecoder.h
